working on Lab 13d

--- a/week-13/Lab-13d/CHEME-5800-Lab13d-MM-AY-2024.ipynb
+++ b/week-13/Lab-13d/CHEME-5800-Lab13d-MM-AY-2024.ipynb
@@ -6,7 +6,23 @@
    "metadata": {},
    "source": [
     "# Lab 13d: Let's build an Observable Markov Model of a Stock Returns\n",
-    "Fill me in"
+    "This lab will familiarize students with constructing an Observable Markov Model of the excess return of a ticker `XYZ` where we defined the excess return as:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation*}\n",
+    "R_{ij} = \\left(\\frac{1}{\\Delta{t}}\\right)\\cdot\\ln\\left(\\frac{S_{i,j}}{S_{i,j-1}}\\right) - \\bar{r}_{f}\n",
+    "\\end{equation*}\n",
+    "$$\n",
+    "\n",
+    "where $R_{ij}$ denotes the excess return of equity $i$ at time $j$, $\\Delta{t}$ denotes the time between $j-1\\rightarrow{j}$ (units: years), $S_{i,\\star}$ denotes the share price of equity $i$ at time $\\star$, and $\\bar{r}_{f}$ denotes the annualized risk free rate.\n",
+    "\n",
+    "## Tasks\n",
+    "Describe the day-to-day variation of the excess return using a fully observable Markov model described by the tuple $\\mathcal{M} = (\\mathcal{S},\\mathcal{O},\\mathbf{P},\\mathbf{E})$; $\\mathcal{S}$ is the set of hidden states, $\\mathcal{O}$ is the set of observable states, $\\mathbf{P}$ is the transition matrix and $\\mathbf{E}$ is the emission matrix. Because we are fully observable, the emission matrix $\\mathbf{E} = \\mathbf{I}$, where $\\mathbf{I}$ is the identity matrix.\n",
+    "\n",
+    "* `Task 1`: Construct the states $\\mathcal{S}$, the emission matrix $\\mathbf{E}$ and transition matrix $\\hat{\\mathbf{T}}$\n",
+    "    * `TODO`: Estimate the transition matrix $\\hat{\\mathbf{T}}$ from market data\n",
+    "* `Task 2`: Simulate the Observable Markov Model (OMM) for an average trading year\n",
+    "    * `TODO`: Generate the stationary distribution from the estimated $\\hat{\\mathbf{T}}$ matrix"
    ]
   },
   {
@@ -30,9 +46,26 @@
       "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Desktop/julia_work/CHEME-4800-5800-Labs-AY-2024/week-13/Lab-13d`\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Desktop/julia_work/CHEME-4800-5800-Labs-AY-2024/week-13/Lab-13d/Project.toml`\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Desktop/julia_work/CHEME-4800-5800-Labs-AY-2024/week-13/Lab-13d/Manifest.toml`\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mDataStructures\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mSortingAlgorithms\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mQuadGK\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39m\u001b[90mStatsBase\u001b[39m\n",
+      "\u001b[32m  ✓ \u001b[39mDistributions\n",
+      "\u001b[32m  ✓ \u001b[39mDataFrames\n",
+      "  6 dependencies successfully precompiled in 18 seconds. 55 already precompiled.\n",
       "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General.toml`\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Desktop/julia_work/CHEME-4800-5800-Labs-AY-2024/week-13/Lab-13d/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Desktop/julia_work/CHEME-4800-5800-Labs-AY-2024/week-13/Lab-13d/Manifest.toml`\n"
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `~/Desktop/julia_work/CHEME-4800-5800-Labs-AY-2024/week-13/Lab-13d/Manifest.toml`\n",
+      "  \u001b[90m[864edb3b] \u001b[39m\u001b[93m↑ DataStructures v0.18.19 ⇒ v0.18.20\u001b[39m\n",
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
+      "\u001b[32m  ✓ \u001b[39mDataFrames\n",
+      "  1 dependency successfully precompiled in 15 seconds. 60 already precompiled.\n",
+      "\u001b[36m\u001b[1m        Info\u001b[22m\u001b[39m We haven't cleaned this depot up for a bit, running Pkg.gc()...\n",
+      "\u001b[32m\u001b[1m      Active\u001b[22m\u001b[39m manifest files: 145 found\n",
+      "\u001b[32m\u001b[1m      Active\u001b[22m\u001b[39m artifact files: 218 found\n",
+      "\u001b[32m\u001b[1m      Active\u001b[22m\u001b[39m scratchspaces: 8 found\n",
+      "\u001b[32m\u001b[1m     Deleted\u001b[22m\u001b[39m 5 package installations (361.199 KiB)\n"
      ]
     }
    ],
@@ -83,7 +116,10 @@
    "id": "601615a8-1b27-49b3-934c-ace1caa02baf",
    "metadata": {},
    "source": [
-    "## Setup the states $\\mathcal{S}$, the emission matrix $\\mathbf{E}$ and transition matrix $\\mathbf{T}$"
+    "## Task 1: Construct the states $\\mathcal{S}$, the emission matrix $\\mathbf{E}$ and transition matrix $\\hat{\\mathbf{T}}$\n",
+    "First, consider the states $\\mathcal{S}$. Suppose we put a label on each excess return value, ranging from `super bad,` $\\dots$,` unchanged,` $\\dots$,` super good,` where if $R\\ll{0}$, then we are `super bad,` or $R\\gg{0}$ we are in the `super good` category (or we are someplace in between). \n",
+    "* We could use the [cumulative distribution function](https://en.wikipedia.org/wiki/Cumulative_distribution_function) computed from the observed return series $R_{i,1}, \\dots, R_{i,n}$ to partition actual excess returns into one of a fixed number of categories. Once we have the categories, we can compute the probability that category $i$ is followed by category $j$ (these values are entries in the state transition matrix $\\hat{\\mathbf{T}}$).\n",
+    "* To start, specify a value for the  `number_of_states` variable, where the `number_of_states` controls how many categories we have when splitting up the return time series"
    ]
   },
   {
@@ -120,8 +156,9 @@
    "id": "34ad667f-3b10-4f70-8f90-86a2e2d727c0",
    "metadata": {},
    "source": [
-    "To compute the transition matrix $\\mathbf{T}$, we'll estimate the transition probabilities from the return data calculated in the `Prerequisites` section and saved in the `Rₘ` variable:\n",
-    "* Let's split the data into two blocks: the first (which we'll call `in-sample`) will be used to estimate the elements of the matrix $\\mathbf{T}$, while the second (which we'll call `out-of-sample`) will be used for testing purposes."
+    "### TODO: Estimate the transition matrix $\\hat{\\mathbf{T}}$ from market data\n",
+    "To estimate the transition matrix $\\hat{\\mathbf{T}}$, we'll estimate the transition probabilities from the excess return data calculated in the `Prerequisites` section and saved in the `Rₘ` variable:\n",
+    "* Let's split the data into two blocks: the first (which we'll call `in-sample`) will be used to estimate the elements of the matrix $\\hat{\\mathbf{T}}$, while the second (which we'll call `out-of-sample`) will be used for testing purposes."
    ]
   },
   {
@@ -138,6 +175,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ece5b71b-ade2-47ec-8687-a8215d76c201",
+   "metadata": {},
+   "source": [
+    "The excess return distribution is a random variable that follows some [probability distribution function](https://en.wikipedia.org/wiki/Probability_distribution). We don't know what that distribution is, but for now, we assume the excess returns follow a [Laplace distribution](https://en.wikipedia.org/wiki/Laplace_distribution)\n",
+    "* We use the [fit_mle function](https://juliastats.org/Distributions.jl/stable/fit/#Distributions.fit_mle-Tuple{Any,%20Any}) exported by the [Distributions.jl package](https://github.com/JuliaStats/Distributions.jl) to fit a [Laplace distribution](https://en.wikipedia.org/wiki/Laplace_distribution) to our our data. We fit the distribution to the full dataset `Rₘ`, and save the distribution in the `d` variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "66998588-5052-4465-93aa-b55bd0ceb484",
@@ -148,61 +194,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3930c894-f2fa-429f-b457-11e520070faf",
+   "cell_type": "markdown",
+   "id": "07c04fe8-4be7-45f9-a2dd-6fed0dd9377d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6-element Vector{Float64}:\n",
-       " 0.0\n",
-       " 0.2\n",
-       " 0.4\n",
-       " 0.6\n",
-       " 0.8\n",
-       " 1.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "percentage_cutoff = range(0.0,stop=1.0,length=(number_of_states+1)) |> collect"
+    "Next, we generate the percentile cutoffs that we use to establish the bounds that correspond to each category of return, i.e., `super bad` or `super good`, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "id": "3930c894-f2fa-429f-b457-11e520070faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentage_cutoff = range(0.0,stop=1.0,length=(number_of_states+1)) |> collect;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f060727-c15a-41f0-a93b-c28c01ab7d00",
+   "metadata": {},
+   "source": [
+    "Now that we have the cutoffs, compute the lower and upper bound for each potentiual category. To do this, we'll use the [quantile function](https://juliastats.org/Distributions.jl/stable/univariate/#Statistics.quantile-Tuple{UnivariateDistribution,%20Real}) exported by the [Distributions.jl package](https://github.com/JuliaStats/Distributions.jl). For a given `0 ≤ q ≤ 1`, `quantile(d, q)` is the smallest value `x` \n",
+    "for which `cdf(d, x) ≥ q`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "3539c8bf-92cd-4b37-97c0-3985ce9085a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5×2 Matrix{Float64}:\n",
-       " -Inf        -1.40451\n",
-       "  -1.40451   -0.206636\n",
-       "  -0.206636   0.56462\n",
-       "   0.56462    1.76249\n",
-       "   1.76249   Inf"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bounds = Array{Float64,2}(undef, number_of_states,2)\n",
     "for s ∈ states\n",
     "    bounds[s,1] = quantile(d,percentage_cutoff[s])\n",
     "    bounds[s,2] = quantile(d,percentage_cutoff[s+1])\n",
     "end\n",
-    "bounds"
+    "bounds;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c00e10-e748-46a5-b691-6c6b76b9cae0",
+   "metadata": {},
+   "source": [
+    "Now that we have the category bounds, let's take the excess return data and determine which state an excess return observation corresponds to. For each sample in the `in_sample_dataset`:\n",
+    "* Classify the sample value into one of the possible categories. Let `state = 1` equal the worst return, and `state = number_of_states` equal the best return. Save these results in the `encoded_in_sample` array:"
    ]
   },
   {
@@ -229,8 +268,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0965ca7d-0448-4de1-ab47-107e35e66c7a",
+   "metadata": {},
+   "source": [
+    "In the matrix $\\mathbf{T}$ compute the `counts` for transition from state `i` to state `j`:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "7f2cf498-f07c-4b61-a0aa-14c108376738",
    "metadata": {},
    "outputs": [
@@ -245,7 +292,7 @@
        "  45.0  40.0  47.0  66.0  75.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,6 +305,14 @@
     "    T[start_index,stop_index] += 1;\n",
     "end\n",
     "T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d67b77c2-520c-48fa-98e6-4e2c3edc587a",
+   "metadata": {},
+   "source": [
+    "From the `counts` matrix $\\mathbf{T}$, compute the transtion probability matrix $\\hat{\\mathbf{T}}$:"
    ]
   },
   {
@@ -294,9 +349,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a695557e-ce39-4690-a1dd-7e4baf3ed5c4",
+   "metadata": {},
+   "source": [
+    "## Task 2: Simulate the Observable Markov Model (OMM)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8e4f644d-774e-4bb6-82f7-7d909e03a511",
+   "execution_count": 16,
+   "id": "7cc20d87-5a26-4c41-b013-8596faca3802",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,15 +372,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a695557e-ce39-4690-a1dd-7e4baf3ed5c4",
+   "id": "7a2eea49-8ead-4b9f-8901-fb495ea07744",
    "metadata": {},
    "source": [
-    "## Simulate the Observable Markov Model (OMM)"
+    "### TODO: Generate the stationary distribution from the estimated $\\hat{\\mathbf{T}}$ matrix\n",
+    "Generate the stationary distribution for the estimated transition matrix $\\hat{T}$ and use it to construct a [Categorical distribution](https://juliastats.org/Distributions.jl/stable/univariate/#Distributions.Categorical) representing the stationary distrubution, save the [Categorical distribution](https://juliastats.org/Distributions.jl/stable/univariate/#Distributions.Categorical) in the `π̄`-variable:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "ca16cd88-78e7-44ca-ac95-06d240610c44",
    "metadata": {},
    "outputs": [],
@@ -327,7 +391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "af4b1b93-1605-4757-8455-45383596bbf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "dbb8b2db-0c36-46d7-b973-e8c43428cfa4",
    "metadata": {},
    "outputs": [
@@ -335,35 +407,35 @@
      "data": {
       "text/plain": [
        "252×10 Matrix{Int64}:\n",
-       " 4  3  3  1  4  3  4  4  1  4\n",
-       " 2  1  1  4  1  4  2  4  1  3\n",
-       " 1  5  4  3  5  5  5  4  5  5\n",
-       " 1  5  4  1  4  4  2  5  1  3\n",
-       " 4  4  3  4  2  2  3  5  1  4\n",
-       " 4  4  3  4  3  1  2  1  2  2\n",
-       " 4  5  5  2  2  5  4  1  4  3\n",
-       " 4  4  3  4  4  4  5  2  2  1\n",
-       " 5  3  4  3  3  2  4  1  4  4\n",
-       " 4  4  5  3  1  4  1  1  4  3\n",
-       " 3  4  5  4  1  3  3  1  1  3\n",
-       " 3  2  1  5  5  1  3  1  1  3\n",
-       " 1  2  5  1  4  1  2  5  5  3\n",
+       " 3  2  3  5  1  3  3  3  5  1\n",
+       " 1  5  5  1  1  3  4  2  1  2\n",
+       " 4  3  5  5  1  4  4  5  1  2\n",
+       " 1  3  4  5  1  5  5  5  5  4\n",
+       " 1  1  3  5  1  5  1  1  3  3\n",
+       " 5  1  3  5  5  1  5  1  4  5\n",
+       " 2  1  3  2  5  1  4  5  4  2\n",
+       " 4  4  1  2  1  5  3  5  1  2\n",
+       " 4  3  1  4  2  5  4  2  4  2\n",
+       " 1  3  1  3  3  5  2  4  4  1\n",
+       " 1  3  2  1  2  5  4  3  4  3\n",
+       " 4  1  3  2  4  4  2  2  5  5\n",
+       " 3  1  1  4  4  1  3  3  3  2\n",
        " ⋮              ⋮           \n",
-       " 2  5  3  4  5  1  5  3  2  4\n",
-       " 1  2  1  2  5  1  1  1  1  2\n",
-       " 5  5  1  4  5  1  5  4  1  4\n",
-       " 5  3  1  4  5  1  4  4  4  3\n",
-       " 5  5  2  2  3  5  2  2  2  4\n",
-       " 5  4  1  5  2  5  1  2  5  3\n",
-       " 1  4  1  3  4  2  5  4  5  4\n",
-       " 4  5  2  4  2  4  4  4  4  5\n",
-       " 2  1  4  5  4  2  3  1  4  5\n",
-       " 1  1  2  5  3  2  1  5  4  1\n",
-       " 1  5  4  4  2  3  5  4  4  4\n",
-       " 1  4  2  5  2  4  4  4  1  4"
+       " 4  4  2  5  1  4  5  2  3  4\n",
+       " 4  5  5  5  4  3  5  3  1  4\n",
+       " 2  3  5  3  4  2  3  5  1  5\n",
+       " 2  2  4  2  1  2  3  4  1  5\n",
+       " 3  3  2  1  4  1  1  3  4  1\n",
+       " 5  2  5  4  5  1  1  5  4  2\n",
+       " 1  1  2  2  4  3  1  3  2  5\n",
+       " 3  1  5  5  4  4  2  5  1  5\n",
+       " 3  2  4  5  4  3  4  3  1  5\n",
+       " 4  3  4  2  4  3  3  5  1  2\n",
+       " 5  2  5  2  5  5  3  4  3  4\n",
+       " 4  3  5  3  4  3  3  5  5  2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,14 +453,6 @@
     "end\n",
     "archive"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d26fca6f-6bb8-4409-b8ee-12dde3d37997",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
