--- a/week-13/Lab-13d/CHEME-5800-Lab13d-MM-AY-2024.ipynb
+++ b/week-13/Lab-13d/CHEME-5800-Lab13d-MM-AY-2024.ipynb
@@ -117,32 +117,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "08cd8fca-674f-4c1a-b066-2b0df00c68a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_states = 5; # TODO: specify a value here\n",
+    "states = range(1,stop=number_of_states) |> collect;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "acf42547-ac57-4c0a-9533-f23e9ff19600",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "ArgumentError: Cannot construct range from arguments:\nstart = 1\nstep = nothing\nstop = nothing\nlength = nothing\nTry specifying more arguments.\n",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: Cannot construct range from arguments:\nstart = 1\nstep = nothing\nstop = nothing\nlength = nothing\nTry specifying more arguments.\n",
-      "",
-      "Stacktrace:",
-      " [1] range_error(start::Int64, step::Nothing, stop::Nothing, length::Nothing)",
-      "   @ Base ./range.jl:249",
-      " [2] _range(start::Int64, step::Nothing, stop::Nothing, len::Nothing)",
-      "   @ Base ./range.jl:163",
-      " [3] range(start::Int64; stop::Nothing, length::Nothing, step::Nothing)",
-      "   @ Base ./range.jl:147",
-      " [4] top-level scope",
-      "   @ In[3]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "5-element Vector{Int64}:\n",
+       " 1\n",
+       " 2\n",
+       " 3\n",
+       " 4\n",
+       " 5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "number_of_states = nothing; # TODO: specify a value here\n",
-    "states = range(1,stop=number_of_states) |> collect;"
+    "states"
    ]
   },
   {
@@ -155,25 +162,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "d04bba8a-a9b8-4697-b6dc-d06dd3643fd4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching ones(::Nothing)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  ones(\u001b[91m::Union{Integer, AbstractUnitRange}...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4marray.jl:631\u001b[24m\u001b[39m\n\u001b[0m  ones(\u001b[91m::Type{T}\u001b[39m, \u001b[91m::Tuple{}\u001b[39m) where T\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4marray.jl:640\u001b[24m\u001b[39m\n\u001b[0m  ones(\u001b[91m::Type{T}\u001b[39m, \u001b[91m::Tuple{Vararg{Integer, N}}\u001b[39m) where {T, N}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4marray.jl:635\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching ones(::Nothing)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  ones(\u001b[91m::Union{Integer, AbstractUnitRange}...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4marray.jl:631\u001b[24m\u001b[39m\n\u001b[0m  ones(\u001b[91m::Type{T}\u001b[39m, \u001b[91m::Tuple{}\u001b[39m) where T\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4marray.jl:640\u001b[24m\u001b[39m\n\u001b[0m  ones(\u001b[91m::Type{T}\u001b[39m, \u001b[91m::Tuple{Vararg{Integer, N}}\u001b[39m) where {T, N}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4marray.jl:635\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[4]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Float64}:\n",
+       " 1.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  1.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  1.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  1.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  1.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "E = diagm(ones(number_of_states));"
+    "E = diagm(ones(number_of_states))\n",
+    "E"
    ]
   },
   {
@@ -190,28 +201,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "9f660cb6-6e83-4f72-9da0-983c96b704ef",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching *(::Nothing, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4moperators.jl:587\u001b[24m\u001b[39m\n\u001b[0m  *(\u001b[91m::BigInt\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mgmp.jl:562\u001b[24m\u001b[39m\n\u001b[0m  *(\u001b[91m::BigFloat\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mmpfr.jl:447\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching *(::Nothing, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4moperators.jl:587\u001b[24m\u001b[39m\n\u001b[0m  *(\u001b[91m::BigInt\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mgmp.jl:562\u001b[24m\u001b[39m\n\u001b[0m  *(\u001b[91m::BigFloat\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mmpfr.jl:447\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[5]:2"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "split_fraction = nothing; # TODO: specify a value here\n",
+    "split_fraction = 0.80; # TODO: specify a value here\n",
     "insample_end_index = round(split_fraction*length(Rₘ), digits=0) |> Int\n",
     "in_sample_dataset = Rₘ[1:insample_end_index]\n",
     "out_of_sample_dataset = Rₘ[(insample_end_index+1):end];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "751dfc59-0e59-4420-8b8f-11f1cc8c047a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1246-element Vector{Float64}:\n",
+       "  1.5050377454909538\n",
+       "  1.095468088086578\n",
+       "  0.7757592626051124\n",
+       "  0.7390204094703445\n",
+       " -0.659217123297486\n",
+       "  1.2784386070568685\n",
+       "  1.8262837004768115\n",
+       "  0.5011457033442471\n",
+       "  0.5948732710078719\n",
+       "  0.44603924309987253\n",
+       "  0.4564092862912787\n",
+       "  1.7522322189385078\n",
+       "  1.0553224381234976\n",
+       "  ⋮\n",
+       " -1.7683802149081336\n",
+       "  4.127512471122741\n",
+       "  3.432104968370095\n",
+       " -1.4529229257278093\n",
+       " -2.3270179626566696\n",
+       " -4.238479254313426\n",
+       " -0.9526529494486393\n",
+       "  1.3995237921397148\n",
+       " -0.3755059424502097\n",
+       "  0.5978570952492587\n",
+       "  4.58492690826067\n",
+       " -1.5766021068686666"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_sample_dataset"
    ]
   },
   {
@@ -225,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "66998588-5052-4465-93aa-b55bd0ceb484",
    "metadata": {},
    "outputs": [],
@@ -243,25 +288,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "3930c894-f2fa-429f-b457-11e520070faf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching +(::Nothing, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  +(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4moperators.jl:587\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::BigInt\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mgmp.jl:555\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::BigFloat\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mmpfr.jl:447\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching +(::Nothing, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  +(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4moperators.jl:587\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::BigInt\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mgmp.jl:555\u001b[24m\u001b[39m\n\u001b[0m  +(\u001b[91m::BigFloat\u001b[39m, ::Union{Int16, Int32, Int64, Int8})\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mmpfr.jl:447\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[7]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "6-element Vector{Float64}:\n",
+       " 0.0\n",
+       " 0.2\n",
+       " 0.4\n",
+       " 0.6\n",
+       " 0.8\n",
+       " 1.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "percentage_cutoff = range(0.0,stop=1.0,length=(number_of_states+1)) |> collect;"
+    "percentage_cutoff = range(0.0,stop=1.0,length=(number_of_states+1)) |> collect"
    ]
   },
   {
@@ -275,21 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "3539c8bf-92cd-4b37-97c0-3985ce9085a3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching Matrix{Float64}(::UndefInitializer, ::Nothing, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  Array{T, N}(\u001b[91m::Missing\u001b[39m, ::Any...) where {T, N}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mbaseext.jl:43\u001b[24m\u001b[39m\n\u001b[0m  Array{T, N}(\u001b[91m::Nothing\u001b[39m, ::Any...) where {T, N}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mbaseext.jl:42\u001b[24m\u001b[39m\n\u001b[0m  Matrix{T}(::UndefInitializer, \u001b[91m::Int64\u001b[39m, ::Int64) where T\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mCore\u001b[39m \u001b[90m\u001b[4mboot.jl:479\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching Matrix{Float64}(::UndefInitializer, ::Nothing, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  Array{T, N}(\u001b[91m::Missing\u001b[39m, ::Any...) where {T, N}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mbaseext.jl:43\u001b[24m\u001b[39m\n\u001b[0m  Array{T, N}(\u001b[91m::Nothing\u001b[39m, ::Any...) where {T, N}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mBase\u001b[39m \u001b[90m\u001b[4mbaseext.jl:42\u001b[24m\u001b[39m\n\u001b[0m  Matrix{T}(::UndefInitializer, \u001b[91m::Int64\u001b[39m, ::Int64) where T\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[90mCore\u001b[39m \u001b[90m\u001b[4mboot.jl:479\u001b[24m\u001b[39m\n\u001b[0m  ...\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[8]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "5×2 Matrix{Float64}:\n",
+       " -Inf        -1.40451\n",
+       "  -1.40451   -0.206636\n",
+       "  -0.206636   0.56462\n",
+       "   0.56462    1.76249\n",
+       "   1.76249   Inf"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -298,7 +350,7 @@
     "    bounds[s,1] = quantile(d,percentage_cutoff[s])\n",
     "    bounds[s,2] = quantile(d,percentage_cutoff[s+1])\n",
     "end\n",
-    "bounds;"
+    "bounds"
    ]
   },
   {
@@ -312,14 +364,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "f2d5bf65-1220-4d1d-85ae-7984043ca677",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5050377454909538"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded_in_sample = Array{Int64,1}();\n",
+    "for i ∈ eachindex(in_sample_dataset)\n",
+    "    value = in_sample_dataset[i];\n",
     "\n",
-    "# TODO: implement logic to encode the return sample"
+    "    class_index = 1;\n",
+    "    for s ∈ states\n",
+    "        if (bounds[s,1] ≤ value && value < bounds[s,2])\n",
+    "            class_index = s;\n",
+    "            break;\n",
+    "        end\n",
+    "    end\n",
+    "    push!(encoded_in_sample, class_index);\n",
+    "end\n",
+    "encoded_in_sample;"
    ]
   },
   {
@@ -332,27 +406,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "7f2cf498-f07c-4b61-a0aa-14c108376738",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching zeros(::Nothing, ::Nothing)",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching zeros(::Nothing, ::Nothing)",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[10]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Float64}:\n",
+       " 100.0  40.0  24.0  38.0  67.0\n",
+       "  55.0  51.0  38.0  57.0  25.0\n",
+       "  39.0  48.0  69.0  50.0  33.0\n",
+       "  35.0  52.0  68.0  65.0  50.0\n",
+       "  41.0  35.0  40.0  59.0  66.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "T = zeros(number_of_states, number_of_states)\n",
-    "\n",
-    "# TODO: Implement logic to estimate the state i -> state j in the next time step"
+    "for i ∈ 2:insample_end_index\n",
+    "    start_index = encoded_in_sample[i-1];\n",
+    "    stop_index = encoded_in_sample[i];\n",
+    "    T[start_index,stop_index] += 1;\n",
+    "end\n",
+    "T"
    ]
   },
   {
@@ -365,21 +446,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "bff6e82d-4db3-453b-99c1-094e2d34ac10",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching zeros(::Nothing, ::Nothing)",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching zeros(::Nothing, ::Nothing)",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[11]:1"
-     ]
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Float64}:\n",
+       " 0.371747  0.148699  0.0892193  0.141264  0.249071\n",
+       " 0.243363  0.225664  0.168142   0.252212  0.110619\n",
+       " 0.16318   0.200837  0.288703   0.209205  0.138075\n",
+       " 0.12963   0.192593  0.251852   0.240741  0.185185\n",
+       " 0.170124  0.145228  0.165975   0.244813  0.273859"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -404,23 +488,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "7cc20d87-5a26-4c41-b013-8596faca3802",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: `states` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `states` not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[12]:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = build(MyObservableMarkovModel, (\n",
     "    states = states,\n",
@@ -439,6 +510,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "79448fd9-4bff-469c-b1e9-b3cb0e93a43d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Int64, Categorical{P} where P<:Real} with 5 entries:\n",
+       "  5 => Categorical{Float64, Vector{Float64}}(…\n",
+       "  4 => Categorical{Float64, Vector{Float64}}(…\n",
+       "  2 => Categorical{Float64, Vector{Float64}}(…\n",
+       "  3 => Categorical{Float64, Vector{Float64}}(…\n",
+       "  1 => Categorical{Float64, Vector{Float64}}(…"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.transition"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7a2eea49-8ead-4b9f-8901-fb495ea07744",
    "metadata": {},
@@ -449,12 +546,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "ca16cd88-78e7-44ca-ac95-06d240610c44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "π̄ = nothing; # TODO: compute the stationary distribution (approx value is ok)"
+    "π̄ = (T̂^100) |> tmp -> Categorical(tmp[1,:]); # TODO: compute the stationary distribution (approx value is ok)"
    ]
   },
   {
@@ -470,16 +567,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "dbb8b2db-0c36-46d7-b973-e8c43428cfa4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "252×10 Matrix{Int64}:\n",
+       " 2  1  5  2  3  5  4  5  1  4\n",
+       " 2  3  3  1  3  3  3  5  4  2\n",
+       " 4  2  3  1  2  2  2  4  3  1\n",
+       " 4  4  2  5  4  4  1  2  2  2\n",
+       " 4  1  4  4  5  4  1  1  4  2\n",
+       " 1  1  4  2  1  4  2  5  5  2\n",
+       " 1  3  3  1  1  5  4  4  3  4\n",
+       " 1  3  5  1  5  5  1  1  3  1\n",
+       " 1  2  4  1  5  4  2  1  5  1\n",
+       " 3  4  2  4  4  4  4  5  4  3\n",
+       " 3  4  2  5  5  3  4  2  4  2\n",
+       " 2  1  3  2  1  4  4  3  3  4\n",
+       " 4  5  1  1  4  4  4  3  3  5\n",
+       " ⋮              ⋮           \n",
+       " 2  4  3  3  1  4  1  2  4  3\n",
+       " 1  1  1  1  4  5  4  1  3  4\n",
+       " 1  5  5  3  4  1  3  5  4  5\n",
+       " 1  4  4  4  4  2  4  4  4  1\n",
+       " 5  4  3  1  1  4  5  3  3  3\n",
+       " 4  5  1  1  1  5  5  5  2  5\n",
+       " 5  5  2  1  4  3  3  5  4  5\n",
+       " 4  5  4  1  3  5  3  1  3  5\n",
+       " 3  4  2  1  5  5  3  1  1  5\n",
+       " 3  1  4  2  2  5  4  2  3  3\n",
+       " 3  3  1  5  2  5  4  1  3  4\n",
+       " 2  1  3  1  4  1  2  4  1  2"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_paths = 10;\n",
     "number_of_steps = 252; # average number of trading days per year\n",
     "archive = Array{Int64,2}(undef, number_of_steps, number_of_paths);\n",
-    "\n",
-    "# TODO: Implement the simulation logic here."
+    "archive = Array{Int64,2}(undef, number_of_steps, number_of_paths);\n",
+    "for i ∈ 1:number_of_paths\n",
+    "    start_state = rand(π̄);\n",
+    "    tmp = model(start_state, number_of_steps)\n",
+    "    for j ∈ 1:number_of_steps\n",
+    "        archive[j,i] = tmp[j]\n",
+    "    end\n",
+    "end\n",
+    "archive"
    ]
   },
   {
